# Alkyone-Render-Engine

./: .gitattributes  .gitignore  CMakeLists.txt  CustomTypes.natvis  README.md  copilot-instructions.md  main.cpp
assets/box/interleaved/: BoxInterleaved.gltf
assets/box/vertexcolours/: BoxVertexColors.gltf
assets/lpgtank/: small_lpg_tank_1k.gltf
include/: VulkanManager.h
include/Context/: IGraphicsContext.h  VulkanContext.h
include/Core/: ApplicationWindow.h  Engine.h  PODTypes.h
include/Rendering/: AssetRegistry.cpp  AssetRegistry.h  Material.h  Mesh.h  MeshGroup.h  MeshLodGroup.h  Renderer.h
include/Rendering/object/: GPUMesh.cpp  GPUMesh.h  IRenderable.h  MeshGroup.h
include/Rendering/types/: Vertex.h
include/Rendering/view/: Camera.cpp  Camera.h
include/containers/: Array.h  DArray.h  SlotMap.h
include/core/: ApplicationWindow.h  CoreDefinitions.h  PODTypes.h
include/math/: GenericMath.h  Matrix4.h  Matrix4.inl  ParabolaMath.h  Types.h  Vector2.h  Vector2.inl  Vector3.h  Vector3.inl  Vector4.h  Vector4.inl
include/rendering/: RenderScene.h  Renderer.h
include/rendering/object/: GPUMesh.h  Mesh.h  MeshGroup.h  MeshLodGroup.h
include/rendering/types/: Vertex.h
include/resources/: AssetRegistry.h  GLTFImporter.h  Resource.h  ResourceHandle.h  ResourceManager.cpp  ResourceManager.h
include/resources/mesh/: GLTFImporter.h
include/rhi/: GraphicsPipelineDesc.h  IGraphicsContext.h  IGraphicsPipeline.h
include/rhi/core/: DynamicRHI.h  IBuffer.h  ICommandBuffer.h  ICommandPool.h  ICommandQueue.h  IDevice.h  IFrameSync.h  IGraphicsPipeline.h  ISurface.h  ISwapchain.h  ITexture.h  RHIBuffer.h  RHIDefinitions.h  RHIGraphicsPipeline.h
include/rhi/core/barriers/: ImageBarrier.h
include/rhi/core/shader/: IShaderObject.h  RHIShader.h  ShaderCursor.cpp  ShaderCursor.h  ShaderOffset.h
include/rhi/descriptors/: BufferDesc.h  CommandPoolDesc.h  GraphicsPipelineDesc.h  ShaderCompileDesc.h
include/rhi/vulkan/: VulkanBuffer.h  VulkanBufferTransforms.h  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanContext.h  VulkanDefinitions.h  VulkanDevice.h  VulkanFrameSync.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImage.h  VulkanQueue.h  VulkanRHI.h  VulkanShader.h  VulkanShaderObject.h  VulkanSurface.h  VulkanSwapchain.h
include/scene/: Node.h  RenderObject.h  Scene.h  SceneManager.cpp  SceneManager.h  SceneObject.h
include/shaders/: ShaderManager.cpp  ShaderManager.h
include/utilities/: FileUtilities.h  GLTFLoader.h  TypeUtilities.h
shaders/: basicShader.slang  triangle.slang
src/context/: IGraphicsContext.cpp  VulkanContext.cpp
src/core/: ApplicationWindow.cpp  Engine.cpp
src/rendering/: Material.cpp  Mesh.cpp  MeshGroup.cpp  MeshLodGroup.cpp  RenderScene.cpp  Renderer.cpp
src/rendering/object/: Mesh.cpp  MeshGroup.cpp  MeshLodGroup.cpp
src/rendering/types/: Vertex.cpp
src/resources/: AssetRegistry.cpp  GLTFImporter.cpp  ResourceManager.cpp
src/resources/mesh/: GLTFImporter.cpp
src/rhi/: DynamicRHI.cpp
src/rhi/vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanCommandPool.cpp  VulkanContext.cpp  VulkanDevice.cpp  VulkanFrameSync.cpp  VulkanGraphicsPipeline.cpp  VulkanImage.cpp  VulkanQueue.cpp  VulkanRHI.cpp  VulkanShaderObject.cpp  VulkanSurface.cpp  VulkanSwapchain.cpp
src/scene/: Node.cpp  RenderObject.cpp  Scene.cpp  SceneManager.cpp  SceneObject.cpp
src/shaders/: ShaderManager.cpp
src/utilities/: GLTFLoader.cpp
